p2/scripts/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2
  labels:
    app: app-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
      - name: app-2
        image: paulbouwer/hello-kubernetes:1.10
        imagePullPolicy: IfNotPresent
